@@ -71,12 +71,12 @@ REPOSITORY
     <https://github.com/tupinek/Pod-Example>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2011-2018 Michal Špaček
+     © 2011-2018 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
