@@ -1,6 +1,7 @@
 0.09
  - Update Module::Install readme_from.
  - Update Module::Install to 1.19 version.
+ - Update author name.
  - Update copyright years.
 
 0.08 2015-10-14T11:21:19+02:00
